# gradio-session

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
.cursor/rules/: api-conventions.md  api-conventions.mdc  code-style.md  code-style.mdc  error-handling.md  error-handling.mdc  git-commands.md  git-commands.mdc  logging.md  logging.mdc  markdown.md  markdown.mdc  project-structure.md  project-structure.mdc
core/: __init__.py  logging.py  session.py
docs/: gradio-session.drawio  gradio-session.md  gradio.md
middleware/: auth.py  logging.py  session.py  utils.py
pages/: base_tab.py  home_page.py
routes/: __init__.py  health.py  home.py  login.py  static.py
services/: __init__.py  auth.py  csrf.py  database.py
session/: __init__.py  database_session.py  inmemory_session.py  redis_session.py  session_store.py
settings/: __init__.py  base.py
src/gradioapp/: __init__.py  config.py  main.py
src/gradioapp/api/middleware/: __init__.py  auth.py  logging.py  session.py  utils.py
src/gradioapp/api/routes/: health.py  home.py  login.py  static.py
src/gradioapp/core/: logging.py
src/gradioapp/domain/: auth.py  csrf.py  user.py
src/gradioapp/domain/session/: __init__.py  helpers.py  store.py  types.py
src/gradioapp/domain/session/backends/: __init__.py  memory.py
src/gradioapp/templates/: base.html
src/gradioapp/ui/: __init__.py  gradio_app.py  navbar.py
src/gradioapp/ui/pages/: base.py  home_page.py
static/: manifest.json
templates/: base.html  home.html  login.html
tests/: conftest.py  test_auth.py  test_config.py  test_csrf.py  test_logging.py  test_main.py  test_middleware.py  test_middleware_utils.py  test_routes.py  test_session_helpers.py  test_session_memory.py  test_session_memory_coverage.py  test_session_store.py  test_ui_base.py  test_ui_javascript.py  test_ui_pages.py  test_ui_structure.py  test_user.py
ui/: __init__.py  gradio_app.py  javascript.py  navbar.py
ui/pages/: __init__.py  base_page.py  home_page.py
