[project]
name = "fastapi-session"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bcrypt>=4.0.1",
    "dotenv>=0.9.9",
    "fastapi>=0.115.0",
    "gradio>=5.29.0",
    "itsdangerous>=2.2.0",
    "loguru>=0.7.3",
    "pathspec>=0.12.1",
    "pyjwt>=2.10.1",
    "uvicorn>=0.34.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.27.0",
]

[tool.ruff]
lint.select = ["I"]   # "I" is the code for isort rules (import sorting)

[tool.ruff.lint.isort]
known-first-party = ["fastapi-session"]  # Optional: your local module names
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]
force-sort-within-sections = true     # Optional: sort within groups
combine-as-imports = true             # Optional: combine 'import a as b'
