[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gradioapp"]

[project]
name = "gradioapp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bcrypt>=4.0.1",
    "dotenv>=0.9.9",
    "fastapi>=0.115.0",
    "gradio>=5.29.0",
    "itsdangerous>=2.2.0",
    "loguru>=0.7.3",
    "pathspec>=0.12.1",
    "pyjwt>=2.10.1",
    "uvicorn>=0.34.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.27.0",
    "pylint>=3.0.0",
]

[project.scripts]
gradioapp = "gradioapp.main:main"

[tool.ruff]
lint.select = ["I"]   # "I" is the code for isort rules (import sorting)

[tool.ruff.lint.isort]
known-first-party = ["gradioapp"]  # Optional: your local module names
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]
force-sort-within-sections = true     # Optional: sort within groups
combine-as-imports = true             # Optional: combine 'import a as b'

[tool.pylint.main]
max-line-length = 120

[tool.pylint.format]
max-line-length = 120

[tool.pylint."messages control"]
disable = [
    "missing-module-docstring",  # Not required for all modules
    "missing-class-docstring",    # Not required for simple classes
    "missing-function-docstring", # Not required for simple functions
    "too-few-public-methods",     # Common for data classes and protocols
    "too-many-arguments",          # Sometimes necessary
    "too-many-locals",            # Sometimes necessary
    "too-many-branches",          # Sometimes necessary
    "too-many-statements",        # Sometimes necessary
    "no-member",                  # False positives with Gradio
    "invalid-name",               # Allow lowercase for constants like redirect_js
    "attribute-defined-outside-init", # Common in some patterns
    "redefined-outer-name",      # Sometimes necessary
    "global-statement",           # Used for module-level state
    "broad-exception-caught",     # Sometimes necessary for error handling
]

[tool.pylint.design]
max-args = 7
max-locals = 20
max-returns = 6
max-branches = 15
max-statements = 50
